--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -107,9 +107,9 @@
   
 }
 
-/* Subscribe Section
+/* video Section
 --------------------------------*/
-#subscribe {
+#video {
   background: linear-gradient(rgba(0, 0 ,0 , .6), rgba(0, 0 ,0 , .6)), url(../img/subscribe-bg.jpg) fixed center center;
   background-size: cover; 
   padding:  80px 0;
